--- a/frontend/views/layouts/auth.ejs
+++ b/frontend/views/layouts/auth.ejs
@@ -17,10 +17,10 @@
     <div class="row">
       <div class="col-sm-6 px-0">
 
-        <nav class="navbar navbar-light px-5">
-          <a class="navbar-brand" href="#">
-            <h1 id="logo">Closet Tracker</h1>
-          </a>
+        <nav class="navbar navbar-light bg-light px-5">
+          <h1>
+            <a href="#" id="logo">Closet Tracker</a>
+          </h1>
         </nav>
         
         <div class="px-5">
