--- a/frontend/views/layouts/boilerplate.ejs
+++ b/frontend/views/layouts/boilerplate.ejs
@@ -6,16 +6,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Closet Tracker</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lobster+Two:ital,wght@1,700&family=Raleway:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="/style.css" type="text/css">
 </head>
-<body class="vh-100">
+<body>
+  <div class="vh-100 d-flex flex-column">
+    <%- include('../partials/navbar') %>
+    <main class="container">
+      <%- include('../partials/flash')%>
+      <%- body %>
+    </main>
+    <%- include('../partials/footer') %>
+  </div>
   
-  <%- include('../partials/navbar') %>
-  <main>
-    <%- include('../partials/flash')%>
-    <%- body %>
-  </main>
-  <%- include('../partials/footer') %>
-
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 
 </body>
