--- a/frontend/views/partials/navbar.ejs
+++ b/frontend/views/partials/navbar.ejs
@@ -1,5 +1,39 @@
-<nav class="navbar bg-light">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Closet Tracker</a>
+<nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid px-5">
+    <h1 class="me-3">
+      <a href="#" id="logo">Closet Tracker</a>
+    </h1>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">My Closet</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Spending</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">New</a>
+          </li>
+        </ul>
+  
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a href="/users/login" class="nav-link">Login</a>
+          </li>
+          <li class="nav-item">
+            <a href="/users/register" class="nav-link">
+              Register</a>
+          </li>
+          <li class="nav-item">
+            <a href="/users/logout" class="nav-link">Logout</a>
+          </li>
+        </ul>
+      
+
+    </div>
   </div>
 </nav>
