--- a/frontend/views/partials/navbar.ejs
+++ b/frontend/views/partials/navbar.ejs
@@ -1,8 +1,8 @@
 <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
-  <div class="container-fluid px-5">
-    <h1 class="me-3">
+  <div class="container-fluid px-3 px-lg-5">
+    <p class="h1 me-3">
       <a href="#" id="logo">Closet Tracker</a>
-    </h1>
+    </p>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -10,13 +10,13 @@
 
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link" href="#">My Closet</a>
+            <a class="nav-link" href="/items">My Closet</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Spending</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">New</a>
+            <a class="nav-link" href="/items/new">New</a>
           </li>
         </ul>
   
@@ -32,8 +32,7 @@
             <a href="/users/logout" class="nav-link">Logout</a>
           </li>
         </ul>
-      
-
+        
     </div>
   </div>
 </nav>
