--- a/frontend/views/layouts/auth.ejs
+++ b/frontend/views/layouts/auth.ejs
@@ -15,25 +15,25 @@
   
   <div class="container-fluid vh-100">
     <div class="row">
-      <div class="col-sm-6 px-0">
+      <div class="col-md-6 px-0">
 
-        <nav class="navbar navbar-light bg-light px-5">
-          <h1>
+        <nav class="navbar navbar-light bg-light px-3 px-lg-5">
+          <p class="h1">
             <a href="#" id="logo">Closet Tracker</a>
-          </h1>
+          </p>
         </nav>
         
-        <div class="px-5">
+        <div class="px-3 px-lg-5">
           <%- include('../partials/flash')%>
         </div>
 
-        <div class="d-flex px-5 mt-3">
+        <div class="d-flex px-3 px-lg-5 mt-3">
           <%- body %>
         </div>
 
       </div>
 
-      <div class="col-sm-6 px-0 d-none d-md-block">
+      <div class="col-md-6 px-0 d-none d-md-block">
         <img src="/closet-home.jpg"
         alt="" class="w-100 vh-100" style="object-fit: cover; object-position: right;">
       </div>
