--- a/frontend/views/layouts/boilerplate.ejs
+++ b/frontend/views/layouts/boilerplate.ejs
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="/style.css" type="text/css">
 </head>
 <body>
-  <div class="vh-100 d-flex flex-column">
+  <div class="d-flex flex-column vh-100">
     <%- include('../partials/navbar') %>
     <main class="container">
       <%- include('../partials/flash')%>
@@ -22,6 +22,7 @@
   </div>
   
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+  <script src="/previewImage.js"></script>
 
 </body>
 </html>
