--- a/frontend/views/partials/footer.ejs
+++ b/frontend/views/partials/footer.ejs
@@ -1,5 +1,3 @@
-<footer class="footer bg-light text-center text-muted mt-auto">
-  <div class="container">
-    <span>&copy; James McEwen 2022</p>
-  </div>
+<footer class="footer mt-auto bg-light text-center text-muted py-3">
+  <span>&copy; James McEwen 2022</span>
 </footer>
