--- a/frontend/views/items/edit.ejs
+++ b/frontend/views/items/edit.ejs
@@ -1,10 +1,10 @@
 <% layout('layouts/boilerplate') %>
 
   <div class="row border-bottom mb-3 py-3">
-    <h1>New Item</h1>
+    <h1>Edit Item</h1>
   </div>
 
-  <form action="/items" method="POST" enctype="multipart/form-data">
+  <form action="/items/<%= item._id %>?_method=PUT" method="POST" enctype="multipart/form-data">
 
     <div class="row border-bottom my-3 py-3">
       <div class="col-4">
@@ -12,7 +12,7 @@
         <p>What is the item called?</p>
       </div>
       <div class="col-8">
-        <input type="text" name="item[name]" id="name" placeholder="Item name (required)" class="form-control" required>
+        <input type="text" name="item[name]" id="name" placeholder="Item name (required)" value="<%= item.name %>" class="form-control" required>
       </div>
     </div>
 
@@ -23,7 +23,7 @@
         <p>Describe the item and why you bought it.</p>
       </div>
       <div class="col-8">
-        <textarea type="textarea" rows='5' name="item[description]" id="description" placeholder="Description" class="form-control w-100" style="resize: none;"></textarea>
+        <textarea type="textarea" rows='5' name="item[description]" id="description" placeholder="Description" class="form-control w-100" style="resize: none;"><%= item.description %></textarea>
       </div>
     </div>
 
@@ -35,7 +35,7 @@
       <div class="col-8">
         <div class="input-group">
           <span class="input-group-text" id="price-label">$</span>
-          <input type="text" name="item[price]" id="price" placeholder="Price (required)" class="form-control" aria-label="price" aria-describedby="price-label" required>
+          <input type="text" name="item[price]" id="price" placeholder="Price (required)" value="<%= item.price %>" class="form-control" aria-label="price" aria-describedby="price-label" required>
         </div>
       </div>
     </div>
@@ -67,7 +67,7 @@
     <div class="row">
       <div class="d-flex">
         <a href="/items" class="btn btn-light btn-lg text-muted ms-auto me-3">Cancel</a>
-        <button class="btn btn-info text-light btn-lg">Add Item</button>
+        <button class="btn btn-info text-light btn-lg">Update Item</button>
       </div>
     </div>
 
@@ -75,5 +75,7 @@
 
   <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
   <script>
-    document.getElementById("datePurchased").value = dayjs().format('YYYY-MM-DD');
+    const utcDate = new Date(<%- JSON.stringify(item.datePurchased) %>);
+    const correctDate = new Date(utcDate.getTime() + utcDate.getTimezoneOffset() * 60000);
+    document.getElementById("datePurchased").value = dayjs(correctDate).format('YYYY-MM-DD');
   </script>
