--- a/frontend/views/layouts/boilerplate.ejs
+++ b/frontend/views/layouts/boilerplate.ejs
@@ -14,7 +14,7 @@
 <body>
   <div class="d-flex flex-column vh-100">
     <%- include('../partials/navbar') %>
-    <main class="container">
+    <main class="container my-4">
       <%- include('../partials/flash')%>
       <%- body %>
     </main>
