--- a/frontend/views/partials/navbar.ejs
+++ b/frontend/views/partials/navbar.ejs
@@ -21,16 +21,19 @@
         </ul>
   
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item">
-            <a href="/users/login" class="nav-link">Login</a>
-          </li>
-          <li class="nav-item">
-            <a href="/users/register" class="nav-link">
-              Register</a>
-          </li>
-          <li class="nav-item">
-            <a href="/users/logout" class="nav-link">Logout</a>
-          </li>
+          <% if(!user) { %>
+            <li class="nav-item">
+              <a href="/users/login" class="nav-link">Login</a>
+            </li>
+            <li class="nav-item">
+              <a href="/users/register" class="nav-link">
+                Register</a>
+            </li>
+          <% } else { %>  
+            <li class="nav-item">
+              <a href="/users/logout" class="nav-link">Logout</a>
+            </li>
+          <% } %> 
         </ul>
         
     </div>
