--- a/frontend/public/style.css
+++ b/frontend/public/style.css
@@ -15,7 +15,6 @@ body {
 #imagePreview {
   display: flex;
   justify-content: center;
-  height: 14rem;
 }
 
 #imagePreview img{
@@ -23,4 +22,8 @@ body {
   border-radius: 4px;
   box-shadow: 0 0 8px rgba(0, 0, 0, 0.2);
   opacity: 85%;
+}
+
+.card-body {
+  height: 5rem;
 }
