--- a/frontend/views/items/index.ejs
+++ b/frontend/views/items/index.ejs
@@ -1,6 +1,66 @@
 <% layout('layouts/boilerplate') %>
+<div class="row border-bottom mb-3 py-3">
+  <h1>Your Closet</h1>
+</div>
+
+<div class="d-flex flex-wrap">
+
   <% for (let item of items) { %>
-    <p><%= item.name %></p>
-    
-    <img src="<%= item.photo.path %>" alt="">
+
+    <div class="col-12 col-md-6 col-lg-3">
+      <div class="card m-3">
+        <% if(item.photo) { %>
+          <img class="card-img-top" src="<%= item.photo.cardImage %>" alt="Item photo">
+        <% } else { %>  
+          <img class="card-img-top" src="https://res.cloudinary.com/dyyktpise/image/upload/v1666905046/closet-tracker/andrej-lisakov-O0j9EivTKfI-unsplash_2_xtksij.jpg" alt="Item photo">
+        <% } %> 
+        
+        <div class="card-body">
+          <h5><%= item.name %></h5>
+        </div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">$<%= item.price %></li>
+          <li class="list-group-item"><%= dayjs.utc(item.datePurchased).format('dddd, MMM. D, YYYY') %></li>
+        </ul>
+        <div class="card-body">
+          <a href="items/<%= item._id %>/edit" class="card-link">Edit</a>
+
+          
+          <a href="#" class="card-link" data-bs-toggle="modal" data-bs-target="#deleteModal<%= item._id %>">
+            Delete
+          </a>
+          
+          <!-- Modal -->
+          <div class="modal fade" id="deleteModal<%= item._id %>" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="deleteModalLabel">Are you sure you want to delete this item?</h5>
+                  <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  <%= item.name %> will be removed from your closet. 
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                  <form class="d-inline" action="/items/<%=item._id%>?_method=DELETE" method="POST">
+                    <button class="btn btn-danger">Delete</button>
+                  </form>
+                </div>
+              </div>
+            </div>
+          </div>
+          
+
+        </div>
+      </div>
+    </div>
+
   <% } %>
+
+</div>
+
+
+
