Fix navbar links

--- a/frontend/views/partials/navbar.ejs
+++ b/frontend/views/partials/navbar.ejs
@@ -1,7 +1,7 @@
 <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid px-3 px-lg-5">
     <p class="h1 me-3">
-      <a href="#" id="logo">Closet Tracker</a>
+      <a href="/items" id="logo">Closet Tracker</a>
     </p>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
